[+] Оптимизирован метод deleteAllTasks [+] Добавлен конструктор InMemoryHistoryManager